# uzpy

./: .cursorrules  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  LLXPRT.md  PLAN.md  PROGRESS.md  README.md  SPEC.md  TASKS.md  TODO.md  WORK.md  build.sh  cleanup.sh  install.sh  llms.txt  md.txt  publish.sh  pyproject.toml  pyrightconfig.json  test_corruption_manual.py  test_docstring_parsing.py  test_indent.py
.claude/: settings.local.json
.cursor/rules/: frame-fingerprinting-algorithm.mdc  spatial-alignment-system.mdc  temporal-alignment-system.mdc  video-processing-pipeline.mdc
.giga/: specifications.json
.github/workflows/: docs.yml  push.yml  release.yml
.specstory/history/: 2025-05-25_20-12-python-modulenotfounderror-discussion.md  2025-05-27_09-20-read-files-and-implement-tasks.md  2025-06-09_11-51-update-documentation-to-reflect-codebase.md
_github/workflows/: docs.yml  push.yml
_previous/: __init__.py  cli.py  hybrid_analyzer.py  jedi_analyzer.py  modern_hybrid_analyzer.py  parallel_analyzer.py  pipeline.py  pyright_analyzer.py  rope_analyzer.py  ruff_analyzer.py  types.py
src/uzpy/: __init__.py  __main__.py  cli.py  cli_modern.py  discovery.py  pipeline.py  types.py  uzpy.py  watcher.py
src/uzpy/analyzer/: __init__.py  astgrep_analyzer.py  cached_analyzer.py  hybrid_analyzer.py  jedi_analyzer.py  modern_hybrid_analyzer.py  parallel_analyzer.py  pyright_analyzer.py  rope_analyzer.py  ruff_analyzer.py
src/uzpy/modifier/: __init__.py  libcst_modifier.py  safe_modifier.py
src/uzpy/parser/: __init__.py  cached_parser.py  tree_sitter_parser.py
src_docs/: mkdocs.yml
src_docs/md/: 01-getting-started.md  02-installation.md  03-command-line-usage.md  04-configuration.md  05-architecture-overview.md  06-api-reference.md  07-extending-uzpy.md  08-performance-optimization.md  09-troubleshooting.md  index.md
test_simple/: sample.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_corruption_prevention.py  test_discovery.py  test_modifier.py  test_package.py  test_parser.py  test_safe_integration.py  test_self_modification.py
varia/: 01task.md  02research.md
